finished initial styling

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,30 @@
 @import "semantic-ui";
+
+.centered.card {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+}
+
+.blurb {
+  border: solid black 2px;
+}
+
+.ui.huge.menu {
+  margin-bottom: 50px;
+}
+
+.ui.card {
+  .blurb {
+    height: 250px;
+  }
+}
+
+.sign-up {
+  padding-left: 20px;
+  padding-right: 20px;
+}
