--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,8 +1,15 @@
 <div class="ui huge menu">
   <%= link_to "Time Capsule", root_path, class: "active item" %>
-  <% if !user_signed_in? %>
-    <%= link_to "Sign In", new_user_session_path, class: "item right floated" %>
-  <% else %>
-    <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "item right floated" %>
-  <% end %>
+  <div class="right menu">
+    <% if !user_signed_in? %>
+      <%= link_to "Sign In", new_user_session_path, class: "item right floated" %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "item right floated" %>
+    <% else %>
+      <%= link_to '#', class: "ui labeled icon button item right floated" do %>
+        <i class="add icon"></i>
+        New Project
+      <% end %>
+      <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "item right floated" %>
+    <% end %>
+  </div>
 </div>
