--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,59 @@
-Hello World!
+<div class="ui segment">
+  <h2 class="ui ceneterd header">Time Capsule</h2>
+  <div class="ui clearing divider"></div>
+  <p>
+    Welcome to Time Capsule! This website gives you the ability to organize your most scattered thoughts, all in one place!
+    Have you ever gotten frustrated with losing your journals, or to-do lists, or other organizational necessities?
+    So have I. Here, you can save your journal entries, important photos, calendar dates, etc and never have to worry
+    about losing them again! Unless you forget to log back in...then I guess it's possible, but don't worry about that!
+  </p>
+</div>
+
+<div class="ui grid">
+  <div class="ui four wide column">
+    <div class="ui card">
+      <div class="content">
+        <div class="centered header">Journal</div>
+      </div>
+      <div class="content blurb">
+        Write down your Journal Entries or general musings!
+        This is just the right place to write down those witty one-liners, profound thoughts,
+        or short writings that often come to us during the day and are seemingly gone as soon as a light breeze picks up.
+      </div>
+    </div>
+  </div>
+  <div class="ui four wide column">
+    <div class="ui card">
+      <div class="content">
+        <div class="centered header">Photos</div>
+      </div>
+      <div class="content blurb">
+        Store those photos that you don't want to lise between now and when you put them in an album!
+        We all have those memories that we capture during a quick walk, and need some palce to house them
+        until we can organize them a bit better. Now you have that place!
+      </div>
+    </div>
+  </div>
+  <div class="ui four wide column">
+    <div class="ui card">
+      <div class="content">
+        <div class="centered header">To-Dos</div>
+      </div>
+      <div class="content blurb">
+        Who wants to have a bunch of pieces of paper lying around, each with a different to-do list on them?
+        Here, you can make youre to-do lists and then delete them when you're done!
+      </div>
+    </div>
+  </div>
+  <div class="ui four wide column">
+    <div class="ui card">
+      <div class="content">
+        <div class="centered header">Calendar</div>
+      </div>
+      <div class="content blurb">
+        We also house a calendar so you can keep track of those important dates! Never miss a birthday or
+        anniversary again, and be the person of the hour when your next cocktail party goes off without a hitch!
+      </div>
+    </div>
+  </div>
+</div>
