groundwork for journal entries/user model tests

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="ui small menu footer">
   <%= link_to "About", about_path, class: "active item left floated" %>
-  <div class="item right floated">
+  <div class="item right menu">
     Made by: Drew Hund - 2020
   </div>
 </div>
