base journal functionality done

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -5,10 +5,16 @@
       <%= link_to "Sign In", new_user_session_path, class: "item right floated" %>
       <%= link_to "Sign Up", new_user_registration_path, class: "item right floated" %>
     <% else %>
-      <%= link_to '#', class: "ui labeled icon button item right floated" do %>
-        <i class="add icon"></i>
+      <div class="ui dropdown right item">
         New Project
-      <% end %>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item"><%= link_to "Journal Entry", new_journal_path %></div>
+          <div class="item">Photo</div>
+          <div class="item">To-Do</div>
+          <div class="item">View my Calendar</div>
+        </div>
+      </div>
       <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "item right floated" %>
     <% end %>
   </div>
