--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -6,6 +6,7 @@
       <%= f.input :title, required: true %>
     </div>
     <div class="field journal-body">
+      <%= f.label :body %>
       <%= f.rich_text_area :body, required: true %>
     </div>
     <div class="form-actions">
