--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -8,4 +8,8 @@
       </p>
     </div>
   </div>
+  <div class="content">
+    <p>Add some topics to make this post easier to find!</p>
+    <%= render 'shared/topics_form', topicable: @journal %>
+  </div>
 </div>
