atgs still nto working, but the error is different!

--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -9,6 +9,9 @@
       <%= f.label :body %>
       <%= f.rich_text_area :body, required: true %>
     </div>
+    <div class="field">
+      <%= f.input :tags, placeholder: "Add tags to make me more searchable!" %>
+    </div>
     <div class="form-actions">
       <%= f.button :submit, "Post Entry", class: "positive ui button" %>
       <%= link_to "Cancel", root_path %>
