tag select fucntionality built

--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -9,6 +9,9 @@
       <%= f.label :body %>
       <%= f.rich_text_area :body, required: true %>
     </div>
+    <div class="field">
+      <%= f.input :tag_ids, as: :select, collection: Tag.order(:name), label_method: :name, input_html: { multipart: true, multiple: true } %>
+    </div>
     <div class="form-actions">
       <%= f.button :submit, "Post Entry", class: "positive ui button" %>
       <%= link_to "Cancel", root_path %>
