--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -10,7 +10,7 @@
       <%= f.rich_text_area :body, required: true %>
     </div>
     <div class="field">
-      <%= f.input :tag_ids, as: :select, collection: Tag.order(:name), label_method: :name, input_html: { multipart: true, multiple: true } %>
+      <%= f.input :tag_ids, collection: Tag.order(:name), label_method: :name, input_html: { multipart: true, multiple: true } %>
     </div>
     <div class="form-actions">
       <%= f.button :submit, "Post Entry", class: "positive ui button" %>
