basic photo model/views set up

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -14,4 +14,17 @@
       </div>
     </div>
   </div>
+  <div class="ui four wide column">
+    <!-- loop through all a users topicables and generate a card for each (current_user.topicables.each do) -->
+    <div class="ui card">
+      <div class="content">
+        <div class="centered header"><%= link_to "My Photos", my_photos_path %></div>
+      </div>
+      <div class="content blurb">
+        Store those photos that you don't want to lise between now and when you put them in an album!
+        We all have those memories that we capture during a quick walk, and need some palce to house them
+        until we can organize them a bit better. Now you have that place!
+      </div>
+    </div>
+  </div>
 </div>
