--- a/app/views/journals/index.html.erb
+++ b/app/views/journals/index.html.erb
@@ -1,14 +1,3 @@
 <h2 class="ui centered header">My Journal Entries</h2>
 
-<div class="ui grid">
-  <%= @journals.each do |entry| %>
-    <div class="ui four wide column">
-      <div class="ui card">
-        <div class="content">
-          <div class="centered header"><%= link_to entry.title, journal_path(entry) %></div>
-        </div>
-        <div class="content blurb"><%= entry.body %></div>
-      </div>
-    </div>
-  <% end %>
-</div>
+<%= render 'shared/index', entries: @journals %>
