--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -10,7 +10,7 @@
         <i class="dropdown icon"></i>
         <div class="menu">
           <div class="item"><%= link_to "Journal Entry", new_journal_path %></div>
-          <div class="item">Photo</div>
+          <div class="item"><%= link_to "Photo Upload", new_photo_path %></div>
           <div class="item">To-Do</div>
           <div class="item">View my Calendar</div>
         </div>
